[gd_scene load_steps=5 format=2]

[ext_resource path="res://Src/Minigames/PipeMinigame/PipePart.gd" type="Script" id=1]
[ext_resource path="res://Assets/Minigames/Pipe.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 31.457 )

[node name="PipePart" type="Sprite"]
texture = ExtResource( 2 )
hframes = 5
frame = 1
script = ExtResource( 1 )

[node name="InOutMark" type="Sprite" parent="."]
visible = false
modulate = Color( 0.145098, 0.0470588, 0.0470588, 1 )
z_index = 8
texture = ExtResource( 2 )
hframes = 5
frame = 2

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PipeEnd1" type="KinematicBody2D" parent="."]
position = Vector2( 0, -22 )
collision_layer = 262144
collision_mask = 262144

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeEnd1"]
shape = SubResource( 1 )

[node name="PipeEnd2" type="KinematicBody2D" parent="."]
position = Vector2( 0, 22 )
collision_layer = 262144
collision_mask = 262144

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeEnd2"]
shape = SubResource( 1 )

[node name="PipeWrong1" type="KinematicBody2D" parent="."]
position = Vector2( -28, 0 )
collision_layer = 262144
collision_mask = 262144
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeWrong1"]
shape = SubResource( 2 )

[node name="PipeWrong2" type="KinematicBody2D" parent="."]
position = Vector2( 28, 0 )
collision_layer = 262144
collision_mask = 262144
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeWrong2"]
shape = SubResource( 2 )

[node name="PipeWrong3" type="KinematicBody2D" parent="."]
position = Vector2( 0, 28 )
rotation = 1.5708
collision_layer = 262144
collision_mask = 262144
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeWrong3"]
shape = SubResource( 2 )
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
